clusters/cluster0/kubernetes/apps/observability/grafana-operator/app/grafana-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  hostnames:
  - grafana.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: cert-manager
  rules:
  - backendRefs:
    - name: grafana
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
